Initial Experiments - TF-IDF Single Field

--- a/cleanDataTables.ipynb
+++ b/cleanDataTables.ipynb
@@ -47,8 +47,8 @@
     {
      "data": {
       "text/plain": [
-       "[('spark.driver.host', 'gpu02.cin.ufpe.br'),\n",
-       " ('spark.app.id', 'local-1566262554708'),\n",
+       "[('spark.driver.port', '35545'),\n",
+       " ('spark.driver.host', 'gpu02.cin.ufpe.br'),\n",
        " ('spark.executor.id', 'driver'),\n",
        " ('spark.driver.memory', '16g'),\n",
        " ('spark.app.name', 'pyspark-shell'),\n",
@@ -57,10 +57,10 @@
        " ('spark.rdd.compress', 'True'),\n",
        " ('spark.serializer.objectStreamReset', '100'),\n",
        " ('spark.master', 'local[*]'),\n",
-       " ('spark.driver.port', '32955'),\n",
        " ('spark.executor.cores', '3'),\n",
        " ('spark.submit.deployMode', 'client'),\n",
-       " ('spark.ui.showConsoleProgress', 'true')]"
+       " ('spark.ui.showConsoleProgress', 'true'),\n",
+       " ('spark.app.id', 'local-1566305676530')]"
       ]
      },
      "execution_count": 4,
@@ -125,7 +125,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 90000/90000 [00:00<00:00, 170047.55it/s]\n"
+      "100%|██████████| 90000/90000 [00:00<00:00, 603492.15it/s]\n"
      ]
     }
    ],
@@ -158,31 +158,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 16398/16398 [00:13<00:00, 1253.63it/s]\n",
-      "100%|██████████| 16617/16617 [00:15<00:00, 1060.53it/s]\n",
-      "100%|██████████| 17557/17557 [00:14<00:00, 1248.59it/s]\n",
-      "100%|██████████| 16184/16184 [00:11<00:00, 1367.32it/s]\n",
-      "100%|██████████| 16920/16920 [00:13<00:00, 1217.29it/s]\n",
-      "100%|██████████| 18141/18141 [00:14<00:00, 1210.15it/s]\n",
-      "100%|██████████| 16420/16420 [00:13<00:00, 1180.24it/s]\n",
-      "100%|██████████| 16634/16634 [00:14<00:00, 1186.43it/s]\n",
-      "100%|██████████| 16907/16907 [00:15<00:00, 1123.03it/s]\n",
-      "100%|██████████| 17160/17160 [00:14<00:00, 1197.59it/s]\n",
-      "100%|██████████| 16484/16484 [00:14<00:00, 1126.49it/s]\n",
-      "100%|██████████| 21350/21350 [00:34<00:00, 620.40it/s] \n",
-      "100%|██████████| 16703/16703 [00:12<00:00, 1290.10it/s]\n",
-      "100%|██████████| 16978/16978 [00:03<00:00, 5067.90it/s]\n",
-      "100%|██████████| 16787/16787 [00:03<00:00, 5058.64it/s]\n",
-      "100%|██████████| 16958/16958 [00:03<00:00, 4922.28it/s]\n",
-      "100%|██████████| 17485/17485 [00:03<00:00, 5489.01it/s]\n",
-      "100%|██████████| 17003/17003 [00:03<00:00, 4916.52it/s]\n"
+      "100%|██████████| 16398/16398 [00:03<00:00, 5038.71it/s]\n",
+      "100%|██████████| 16617/16617 [00:03<00:00, 5305.10it/s]\n",
+      "100%|██████████| 17557/17557 [00:03<00:00, 5609.79it/s]\n",
+      "100%|██████████| 16184/16184 [00:14<00:00, 1150.19it/s]\n",
+      "100%|██████████| 16920/16920 [00:16<00:00, 1038.17it/s]\n",
+      "100%|██████████| 18141/18141 [00:15<00:00, 1207.46it/s]\n",
+      "100%|██████████| 16420/16420 [00:14<00:00, 1134.71it/s]\n",
+      "100%|██████████| 16634/16634 [00:14<00:00, 1144.36it/s]\n",
+      "100%|██████████| 16907/16907 [00:14<00:00, 1149.92it/s]\n",
+      "100%|██████████| 17160/17160 [00:14<00:00, 1162.34it/s]\n",
+      "100%|██████████| 16484/16484 [00:15<00:00, 1098.73it/s]\n",
+      "100%|██████████| 21350/21350 [00:35<00:00, 604.99it/s] \n",
+      "100%|██████████| 16703/16703 [00:13<00:00, 1213.09it/s]\n",
+      "100%|██████████| 16978/16978 [00:03<00:00, 5083.52it/s]\n",
+      "100%|██████████| 16787/16787 [00:03<00:00, 5072.54it/s]\n",
+      "100%|██████████| 16958/16958 [00:03<00:00, 4957.92it/s]\n",
+      "100%|██████████| 17485/17485 [00:03<00:00, 5504.00it/s]\n",
+      "100%|██████████| 17003/17003 [00:03<00:00, 4971.14it/s]\n"
      ]
     }
    ],
@@ -257,15 +257,16 @@
     "                tableBody = tableBody +' '+ tableColumns.text\n",
     "            \n",
     "        tableBody = clearString(tableBody)\n",
-    "    \n",
+    "        \n",
+    "        cachAllText = tablePgTitle +\" \"+tableSectionTitle+\" \"+tableCaption+\" \"+tableHeader+\" \"+tableBody\n",
     "    \n",
     "        # save the table in list\n",
-    "        formattedTables.append([tablePgID,tablePgTitle,tableSectionTitle,tableCaption,tableHeader,tableBody])"
+    "        formattedTables.append([tablePgID,tablePgTitle,tableSectionTitle,tableCaption,tableHeader,tableBody,cachAllText])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,14 +301,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 97%|█████████▋| 298793/308686 [02:37<00:05, 1896.76it/s]\n"
+      " 97%|█████████▋| 298793/308686 [02:32<00:05, 1961.36it/s] \n"
      ]
     }
    ],
@@ -319,14 +320,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 298793/298793 [00:04<00:00, 59895.94it/s]\n"
+      "100%|██████████| 298793/298793 [00:09<00:00, 30751.59it/s]\n"
      ]
     }
    ],
@@ -348,8 +349,10 @@
     "        tableHeader = tables[4]\n",
     "        \n",
     "        tableBody = tables[5]\n",
+    "        \n",
+    "        cachAllText = tables[6]\n",
     "    \n",
-    "        row = [tablePgID,tablePgTitle,tableSectionTitle,tableCaption,tableHeader,tableBody]\n",
+    "        row = [tablePgID,tablePgTitle,tableSectionTitle,tableCaption,tableHeader,tableBody,cachAllText]\n",
     "        \n",
     "        wr.writerow(row)"
    ]
