--- a/singleField-TF-IDF.ipynb
+++ b/singleField-TF-IDF.ipynb
@@ -23,7 +23,7 @@
    "outputs": [],
    "source": [
     "articles = pd.read_csv('articlesDataset/cleanDataArticles', delimiter=',', header=None)\n",
-    "tables = pd.read_csv('articlesDataset/cleanDataTables', delimiter=',', header=None)"
+    "tables = pd.read_csv('articlesDataset/cleanDataTablesFile', delimiter=',', header=None)"
    ]
   },
   {
@@ -46,24 +46,23 @@
     "\n",
     "for tables in formattedTables:\n",
     "    \n",
-    "    corpusTables.append(str(tables[4]))"
+    "    corpusTables.append(str(tables[6]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "corpusArticlesID = []\n",
-    "corpusArticlesText = []\n",
-    "\n",
-    "for i in range(20):\n",
+    "def selectRandomArticles():\n",
     "    \n",
-    "    randomArticle = random.choice(formattedArticles)\n",
+    "    for i in range(10):\n",
     "    \n",
-    "    corpusArticlesID.append(randomArticle[0])\n",
-    "    corpusArticlesText.append(str(randomArticle[1]))"
+    "        randomArticle = random.choice(formattedArticles)\n",
+    "    \n",
+    "        corpusArticlesID.append(randomArticle[0])\n",
+    "        corpusArticlesText.append(str(randomArticle[1]))"
    ]
   },
   {
@@ -74,15 +73,6 @@
    "source": [
     "vectorizer = TfidfVectorizer(stop_words='english', analyzer='word')\n",
     "tablesByCharacteristics = vectorizer.fit_transform(corpusTables)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "articlesByCharacteristics = vectorizer.transform(corpusArticlesText)"
    ]
   },
   {
@@ -101,8 +91,6 @@
     "        \n",
     "             countTopTables = countTopTables + 1\n",
     "    \n",
-    "    #print(str(idArticle) + '-' + str(countTopTables))\n",
-    "    \n",
     "    return countTopTables"
    ]
   },
@@ -117,8 +105,6 @@
     "    idRankedTables = []\n",
     "\n",
     "    for topkDistance in topK:\n",
-    "    \n",
-    "        #index = distanceVector.index(topkDistance)\n",
     "        \n",
     "        index = np.where(distanceVector == topkDistance)\n",
     "         \n",
@@ -131,145 +117,624 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "def getAccuracy(idRankedTables, idQueryGoal):\n",
     "\n",
-    "    totalRanquedTables = len(idRankedTables)\n",
-    "\n",
-    "    match = 0\n",
+    "    accuracy = 0\n",
     "\n",
     "    for idTable in idRankedTables:\n",
     "    \n",
     "        if idTable == idQueryGoal:\n",
     "    \n",
-    "            match = match + 1\n",
+    "            accuracy = 1\n",
+    "            break;\n",
     "\n",
-    "    accuracy = match / totalRanquedTables\n",
-    "    \n",
     "    return accuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0/30 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "execution = 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  3%|▎         | 1/30 [00:12<05:51, 12.10s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "execution = 1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  7%|▋         | 2/30 [00:24<05:39, 12.13s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "execution = 2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 10%|█         | 3/30 [00:36<05:27, 12.12s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "execution = 3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 13%|█▎        | 4/30 [00:48<05:15, 12.13s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "execution = 4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 17%|█▋        | 5/30 [01:00<05:02, 12.12s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "execution = 5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 20%|██        | 6/30 [01:12<04:50, 12.12s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "execution = 6\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 23%|██▎       | 7/30 [01:24<04:38, 12.11s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "execution = 7\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 27%|██▋       | 8/30 [01:36<04:26, 12.11s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "execution = 8\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 30%|███       | 9/30 [01:48<04:13, 12.07s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "execution = 9\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 33%|███▎      | 10/30 [02:01<04:01, 12.07s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "execution = 10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 37%|███▋      | 11/30 [02:13<03:51, 12.16s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "execution = 11\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 40%|████      | 12/30 [02:25<03:41, 12.29s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "execution = 12\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 43%|████▎     | 13/30 [02:38<03:27, 12.23s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "execution = 13\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 47%|████▋     | 14/30 [02:50<03:17, 12.35s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "execution = 14\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 50%|█████     | 15/30 [03:02<03:04, 12.28s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "execution = 15\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 53%|█████▎    | 16/30 [03:15<02:54, 12.47s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "execution = 16\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 57%|█████▋    | 17/30 [03:29<02:49, 13.01s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "execution = 17\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 60%|██████    | 18/30 [03:44<02:41, 13.43s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "execution = 18\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 63%|██████▎   | 19/30 [03:56<02:24, 13.17s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "execution = 19\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 67%|██████▋   | 20/30 [04:11<02:15, 13.50s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "execution = 20\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 70%|███████   | 21/30 [04:25<02:02, 13.65s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "execution = 21\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 73%|███████▎  | 22/30 [04:37<01:45, 13.19s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "execution = 22\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 77%|███████▋  | 23/30 [04:49<01:30, 12.88s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "execution = 23\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 80%|████████  | 24/30 [05:01<01:16, 12.68s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "execution = 24\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 83%|████████▎ | 25/30 [05:13<01:02, 12.54s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "execution = 25\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 87%|████████▋ | 26/30 [05:26<00:49, 12.42s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "execution = 26\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 90%|█████████ | 27/30 [05:38<00:37, 12.35s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "execution = 27\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 93%|█████████▎| 28/30 [05:50<00:24, 12.27s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "execution = 28\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 97%|█████████▋| 29/30 [06:02<00:12, 12.22s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "execution = 29\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 30/30 [06:14<00:00, 12.15s/it]\n"
+     ]
+    }
+   ],
    "source": [
-    "accuracy = []\n",
+    "AverageTop5 = []\n",
+    "AverageTop10 = []\n",
+    "AverageTop15 = []\n",
+    "AverageTop20 = []\n",
     "\n",
-    "totalSelectedArticles = int(articlesByCharacteristics.shape[0])\n",
+    "for execution in tqdm(range(30)):\n",
+    "    \n",
+    "    print(\"execution = \"+ str(execution))\n",
+    "    \n",
+    "    corpusArticlesID = []\n",
+    "    corpusArticlesText = []\n",
+    "    \n",
+    "    selectRandomArticles()\n",
+    "    \n",
+    "    #print(corpusArticlesID)\n",
+    "    \n",
+    "    articlesByCharacteristics = vectorizer.transform(corpusArticlesText)\n",
+    "    \n",
+    "    for accuracyK in range(5,21,5):\n",
+    "    \n",
+    "        accuracy = []\n",
     "\n",
-    "for i in range(totalSelectedArticles):\n",
+    "        totalSelectedArticles = int(articlesByCharacteristics.shape[0])\n",
+    "\n",
+    "        for i in range(totalSelectedArticles):\n",
     "    \n",
-    "    distanceVector = pairwise_distances(articlesByCharacteristics[i], tablesByCharacteristics, metric='cosine')\n",
+    "            distanceVector = pairwise_distances(articlesByCharacteristics[i], tablesByCharacteristics, metric='cosine')\n",
     "    \n",
-    "    idQueryGoal = int(corpusArticlesID[i])\n",
+    "            idQueryGoal = int(corpusArticlesID[i])\n",
     "    \n",
-    "    countTopTables = getTotalTablesByArticle(idQueryGoal)\n",
+    "            countTopTables = accuracyK\n",
+    "        \n",
+    "            topKRank = nsmallest(countTopTables, distanceVector[0])\n",
     "    \n",
-    "    topK = nsmallest(countTopTables, distanceVector[0])\n",
+    "            idRankedTables = getIdRankedTalbes(topKRank,distanceVector[0])\n",
     "    \n",
-    "    idRankedTables = getIdRankedTalbes(topK,distanceVector[0])\n",
+    "            accuracy.append(getAccuracy(idRankedTables,idQueryGoal))\n",
     "    \n",
-    "    #print(idRankedTables)\n",
-    "    \n",
-    "    accuracy.append(getAccuracy(idRankedTables,idQueryGoal))"
+    "        if accuracyK == 5:\n",
+    "            \n",
+    "            AverageTop5.append(np.mean(accuracy))\n",
+    "        \n",
+    "        if accuracyK == 10:\n",
+    "            \n",
+    "            AverageTop10.append(np.mean(accuracy))\n",
+    "        \n",
+    "        if accuracyK == 15:\n",
+    "            \n",
+    "            AverageTop15.append(np.mean(accuracy))\n",
+    "        \n",
+    "        if accuracyK == 20:\n",
+    "            \n",
+    "            AverageTop20.append(np.mean(accuracy))\n",
+    "            \n",
+    "        #print(\"TOP \"+str(accuracyK)+\" = \"+str(np.mean(accuracy)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.16666666666666666,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.75,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0]"
+       "0.09451631252505219"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "accuracy"
+    "np.std(AverageTop5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[7075270,\n",
-       " 33675978,\n",
-       " 582420,\n",
-       " 6803709,\n",
-       " 13280770,\n",
-       " 3062981,\n",
-       " 358293,\n",
-       " 27532334,\n",
-       " 4581475,\n",
-       " 11094228,\n",
-       " 1186387,\n",
-       " 2725690,\n",
-       " 370528,\n",
-       " 26350204,\n",
-       " 9066267,\n",
-       " 184058,\n",
-       " 34257219,\n",
-       " 5185171,\n",
-       " 11668399,\n",
-       " 1822080]"
+       "0.1175679472569893"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "corpusArticlesID"
+    "np.std(AverageTop10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1303414319734477"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.std(AverageTop15)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.13337499349161705"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.std(AverageTop20)"
+   ]
   }
  ],
  "metadata": {
