Algorithm TF-IDF  multi field

--- a/multiField-TF-IDF.ipynb
+++ b/multiField-TF-IDF.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,32 +42,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "corpusTablesCaption = []\n",
-    "corpusTablesHeader = []\n",
-    "corpusTablesText = []\n",
+    "corpusTablePgTitle = []\n",
+    "corpusTableSectionTitle = []\n",
+    "corpusTableCaption = []\n",
+    "corpusTableHeader  = []\n",
+    "corpusTableBody = []\n",
     "\n",
     "for tables in formattedTables:\n",
     "    \n",
-    "    corpusTablesCaption.append(str(tables[1]))\n",
-    "    corpusTablesHeader.append(str(tables[2]))\n",
-    "    corpusTablesText.append(str(tables[3]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "corpusArticlesID = []\n",
-    "corpusArticlesText = []\n",
-    "\n",
-    "for i in range(20):\n",
-    "    \n",
-    "    randomArticle = random.choice(formattedArticles)\n",
-    "    \n",
-    "    corpusArticlesID.append(randomArticle[0])\n",
-    "    corpusArticlesText.append(str(randomArticle[1]))"
+    "    corpusTablePgTitle.append(str(tables[1]))\n",
+    "    corpusTableSectionTitle.append(str(tables[2]))\n",
+    "    corpusTableCaption.append(str(tables[3]))\n",
+    "    corpusTableHeader.append(str(tables[4]))\n",
+    "    corpusTableBody.append(str(tables[5]))"
    ]
   },
   {
@@ -76,24 +63,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "vectorizerPgTitle = TfidfVectorizer(stop_words='english', analyzer='word')\n",
+    "vectorizerSectionTitle = TfidfVectorizer(stop_words='english', analyzer='word')\n",
     "vectorizerCaption = TfidfVectorizer(stop_words='english', analyzer='word')\n",
     "vectorizerHeader = TfidfVectorizer(stop_words='english', analyzer='word')\n",
-    "vectorizerText = TfidfVectorizer(stop_words='english', analyzer='word')\n",
+    "vectorizerBody = TfidfVectorizer(stop_words='english', analyzer='word')\n",
     "\n",
-    "tablesVectorCaption = vectorizerCaption.fit_transform(corpusTablesCaption)\n",
-    "tablesVectorHeader = vectorizerHeader.fit_transform(corpusTablesHeader)\n",
-    "tablesVectorText = vectorizerText.fit_transform(corpusTablesText)"
+    "tablesVectorPgTitle = vectorizerPgTitle.fit_transform(corpusTablePgTitle)\n",
+    "tablesVectorSectionTitle = vectorizerSectionTitle.fit_transform(corpusTableSectionTitle)\n",
+    "tablesVectorCaption = vectorizerCaption.fit_transform(corpusTableCaption)\n",
+    "tablesVectorHeader = vectorizerHeader.fit_transform(corpusTableHeader)\n",
+    "tablesVectorBody = vectorizerBody.fit_transform(corpusTableBody)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "articlesVectorCaption = vectorizerCaption.transform(corpusArticlesText)\n",
-    "articlesVectorHeader = vectorizerHeader.transform(corpusArticlesText)\n",
-    "articlesVectorText = vectorizerText.transform(corpusArticlesText)"
+    "totalArticlesToSearch = 100\n",
+    "\n",
+    "def selectRandomArticles():\n",
+    "    \n",
+    "    for i in range(totalArticlesToSearch):\n",
+    "    \n",
+    "        randomArticle = random.choice(formattedArticles)\n",
+    "    \n",
+    "        corpusArticlesID.append(randomArticle[0])\n",
+    "        corpusArticlesText.append(str(randomArticle[1]))"
    ]
   },
   {
@@ -102,34 +100,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getTotalTablesByArticle(idArticle):\n",
-    "\n",
-    "    countTopTables = 0\n",
-    "\n",
-    "    for tables in formattedTables:\n",
-    "    \n",
-    "        if tables[0] == int(idArticle):\n",
-    "        \n",
-    "             countTopTables = countTopTables + 1\n",
-    "    \n",
-    "    #print(str(idArticle) + '-' + str(countTopTables))\n",
-    "    \n",
-    "    return countTopTables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def getIdRankedTalbes(topK,distanceVector):\n",
     "\n",
     "    idRankedTables = []\n",
     "\n",
     "    for topkDistance in topK:\n",
-    "    \n",
-    "        #index = distanceVector.index(topkDistance)\n",
     "        \n",
     "        index = np.where(distanceVector == topkDistance)\n",
     "         \n",
@@ -142,97 +117,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def getAccuracy(idRankedTables, idQueryGoal):\n",
     "\n",
-    "    totalRanquedTables = len(idRankedTables)\n",
-    "\n",
-    "    match = 0\n",
+    "    accuracy = 0\n",
     "\n",
     "    for idTable in idRankedTables:\n",
     "    \n",
     "        if idTable == idQueryGoal:\n",
     "    \n",
-    "            match = match + 1\n",
+    "            accuracy = 1\n",
+    "            break;\n",
     "\n",
-    "    accuracy = match / totalRanquedTables\n",
-    "    \n",
     "    return accuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "accuracy = []\n",
-    "\n",
-    "totalSelectedArticles = int(articlesVectorCaption.shape[0])\n",
-    "\n",
-    "for i in range(totalSelectedArticles):\n",
-    "    \n",
-    "    distanceVectorCaption = pairwise_distances(articlesVectorCaption[i], tablesVectorCaption, metric='cosine')\n",
-    "    distanceVectorHeader = pairwise_distances(articlesVectorHeader[i], tablesVectorHeader, metric='cosine')\n",
-    "    distanceVectorText = pairwise_distances(articlesVectorText[i], tablesVectorText, metric='cosine')\n",
-    "    \n",
-    "    distanceSum = np.sum([distanceVectorCaption, distanceVectorHeader, distanceVectorText], axis=0)\n",
-    "    distanceAvg = np.mean([distanceVectorCaption, distanceVectorHeader, distanceVectorText], axis=0)\n",
-    "    distanceMax = np.amax([distanceVectorCaption, distanceVectorHeader, distanceVectorText], axis=0)\n",
-    "    \n",
-    "    idQueryGoal = int(corpusArticlesID[i])\n",
-    "    \n",
-    "    countTopTables = getTotalTablesByArticle(idQueryGoal)\n",
-    "    \n",
-    "    topK = nsmallest(countTopTables, distanceSum[0])\n",
-    "    \n",
-    "    idRankedTables = getIdRankedTalbes(topK,distanceSum[0])\n",
-    "    \n",
-    "    #print(idRankedTables)\n",
-    "    \n",
-    "    accuracy.append(getAccuracy(idRankedTables,idQueryGoal))"
+    "AverageTop5 = []\n",
+    "AverageTop10 = []\n",
+    "AverageTop15 = []\n",
+    "AverageTop20 = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.0,\n",
-       " 0.0,\n",
-       " 1.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.25,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "accuracy"
+    "def saveAccuracy(k,mean):\n",
+    "    \n",
+    "    if k == 5:\n",
+    "            \n",
+    "        AverageTop5.append(np.mean(accuracy))\n",
+    "        \n",
+    "    if k == 10:\n",
+    "            \n",
+    "        AverageTop10.append(np.mean(accuracy))\n",
+    "        \n",
+    "    if k == 15:\n",
+    "            \n",
+    "        AverageTop15.append(np.mean(accuracy))\n",
+    "        \n",
+    "    if k == 20:\n",
+    "            \n",
+    "        AverageTop20.append(np.mean(accuracy))"
    ]
   },
   {
@@ -241,38 +178,99 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[1298785,\n",
-       " 8747079,\n",
-       " 2163477,\n",
-       " 8222233,\n",
-       " 14076943,\n",
-       " 343691,\n",
-       " 6266060,\n",
-       " 18213,\n",
-       " 401592,\n",
-       " 14416180,\n",
-       " 397266,\n",
-       " 29240054,\n",
-       " 12589784,\n",
-       " 36754499,\n",
-       " 21103330,\n",
-       " 8864870,\n",
-       " 18960141,\n",
-       " 11308618,\n",
-       " 31595506,\n",
-       " 10638591]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 30/30 [06:31<00:00, 12.93s/it]\n"
+     ]
     }
    ],
    "source": [
-    "corpusArticlesID"
+    "for execution in tqdm(range(30)):\n",
+    "    \n",
+    "    #print(\"execution = \"+ str(execution))\n",
+    "    \n",
+    "    corpusArticlesID = []\n",
+    "    corpusArticlesText = []\n",
+    "    \n",
+    "    selectRandomArticles()\n",
+    "    \n",
+    "    #print(corpusArticlesID)\n",
+    "    \n",
+    "    articlesVectorPgTitle = vectorizerPgTitle.transform(corpusArticlesText)\n",
+    "    articlesVectorSectionTitle = vectorizerSectionTitle.transform(corpusArticlesText)\n",
+    "    articlesVectorCaption = vectorizerCaption.transform(corpusArticlesText)\n",
+    "    articlesVectorHeader = vectorizerHeader.transform(corpusArticlesText)\n",
+    "    articlesVectorBody = vectorizerBody.transform(corpusArticlesText)\n",
+    "    \n",
+    "    for accuracyK in range(5,21,5):\n",
+    "    \n",
+    "        accuracy = []\n",
+    "\n",
+    "        totalSelectedArticles = int(articlesVectorPgTitle.shape[0])\n",
+    "\n",
+    "        for i in range(totalSelectedArticles):\n",
+    "    \n",
+    "            distanceVectorPgTitle = pairwise_distances(articlesVectorPgTitle[i], tablesVectorPgTitle, metric='cosine')\n",
+    "            distanceVectorSectionTitle = pairwise_distances(articlesVectorSectionTitle[i], tablesVectorSectionTitle, metric='cosine')\n",
+    "            distanceVectorCaption = pairwise_distances(articlesVectorCaption[i], tablesVectorCaption, metric='cosine')\n",
+    "            distanceVectorHeader = pairwise_distances(articlesVectorHeader[i], tablesVectorHeader, metric='cosine')\n",
+    "            distanceVectorBody = pairwise_distances(articlesVectorBody[i], tablesVectorBody, metric='cosine')\n",
+    "    \n",
+    "            distanceVector = np.amax([distanceVectorPgTitle, distanceVectorSectionTitle, distanceVectorCaption, distanceVectorHeader, distanceVectorBody], axis=0)\n",
+    "            #distanceAvg = np.mean([distanceVectorCaption, distanceVectorHeader, distanceVectorText], axis=0)\n",
+    "            #distanceMax = np.amax([distanceVectorCaption, distanceVectorHeader, distanceVectorText], axis=0)\n",
+    "    \n",
+    "            idQueryGoal = int(corpusArticlesID[i])\n",
+    "    \n",
+    "            countTopTables = accuracyK\n",
+    "        \n",
+    "            topKRank = nsmallest(countTopTables, distanceVector[0])\n",
+    "    \n",
+    "            idRankedTables = getIdRankedTalbes(topKRank,distanceVector[0])\n",
+    "    \n",
+    "            accuracy.append(getAccuracy(idRankedTables,idQueryGoal))\n",
+    "    \n",
+    "        #save the accuracy on the list\n",
+    "        saveAccuracy(accuracyK,np.mean(accuracy))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0133 (±) 0.034\n",
+      "0.0233 (±) 0.0423\n",
+      "0.0267 (±) 0.0442\n",
+      "0.03 (±) 0.0458\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(str(round(np.mean(AverageTop5),4))+\" (±) \"+str(round(np.std(AverageTop5),4)))\n",
+    "print(str(round(np.mean(AverageTop10),4))+\" (±) \"+str(round(np.std(AverageTop10),4)))\n",
+    "print(str(round(np.mean(AverageTop15),4))+\" (±) \"+str(round(np.std(AverageTop15),4)))\n",
+    "print(str(round(np.mean(AverageTop20),4))+\" (±) \"+str(round(np.std(AverageTop20),4)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
