--- a/singleField-TF-IDF.ipynb
+++ b/singleField-TF-IDF.ipynb
@@ -23,7 +23,7 @@
    "outputs": [],
    "source": [
     "articles = pd.read_csv('articlesDataset/cleanDataArticles', delimiter=',', header=None)\n",
-    "tables = pd.read_csv('articlesDataset/cleanDataTablesFile', delimiter=',', header=None)"
+    "tables = pd.read_csv('articlesDataset/cleanDataTables', delimiter=',', header=None)"
    ]
   },
   {
@@ -51,23 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def selectRandomArticles():\n",
-    "    \n",
-    "    for i in range(10):\n",
-    "    \n",
-    "        randomArticle = random.choice(formattedArticles)\n",
-    "    \n",
-    "        corpusArticlesID.append(randomArticle[0])\n",
-    "        corpusArticlesText.append(str(randomArticle[1]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,26 +61,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getTotalTablesByArticle(idArticle):\n",
+    "totalArticlesToSearch = 100\n",
     "\n",
-    "    countTopTables = 0\n",
-    "\n",
-    "    for tables in formattedTables:\n",
+    "def selectRandomArticles():\n",
     "    \n",
-    "        if tables[0] == int(idArticle):\n",
+    "    for i in range(totalArticlesToSearch):\n",
+    "    \n",
+    "        randomArticle = random.choice(formattedArticles)\n",
+    "    \n",
+    "        corpusArticlesID.append(randomArticle[0])\n",
     "        \n",
-    "             countTopTables = countTopTables + 1\n",
-    "    \n",
-    "    return countTopTables"
+    "        corpusArticlesText.append(str(randomArticle[1]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,476 +121,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AverageTop5 = []\n",
+    "AverageTop10 = []\n",
+    "AverageTop15 = []\n",
+    "AverageTop20 = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def saveAccuracy(k,mean):\n",
+    "    \n",
+    "    if k == 5:\n",
+    "            \n",
+    "        AverageTop5.append(np.mean(accuracy))\n",
+    "        \n",
+    "    if k == 10:\n",
+    "            \n",
+    "        AverageTop10.append(np.mean(accuracy))\n",
+    "        \n",
+    "    if k == 15:\n",
+    "            \n",
+    "        AverageTop15.append(np.mean(accuracy))\n",
+    "        \n",
+    "    if k == 20:\n",
+    "            \n",
+    "        AverageTop20.append(np.mean(accuracy))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
-      "  0%|          | 0/30 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "execution = 0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "  3%|▎         | 1/30 [00:12<05:51, 12.10s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "execution = 1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "  7%|▋         | 2/30 [00:24<05:39, 12.13s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "execution = 2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 10%|█         | 3/30 [00:36<05:27, 12.12s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "execution = 3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 13%|█▎        | 4/30 [00:48<05:15, 12.13s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "execution = 4\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 17%|█▋        | 5/30 [01:00<05:02, 12.12s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "execution = 5\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 20%|██        | 6/30 [01:12<04:50, 12.12s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "execution = 6\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 23%|██▎       | 7/30 [01:24<04:38, 12.11s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "execution = 7\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 27%|██▋       | 8/30 [01:36<04:26, 12.11s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "execution = 8\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 30%|███       | 9/30 [01:48<04:13, 12.07s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "execution = 9\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 33%|███▎      | 10/30 [02:01<04:01, 12.07s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "execution = 10\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 37%|███▋      | 11/30 [02:13<03:51, 12.16s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "execution = 11\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 40%|████      | 12/30 [02:25<03:41, 12.29s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "execution = 12\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 43%|████▎     | 13/30 [02:38<03:27, 12.23s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "execution = 13\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 47%|████▋     | 14/30 [02:50<03:17, 12.35s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "execution = 14\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 50%|█████     | 15/30 [03:02<03:04, 12.28s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "execution = 15\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 53%|█████▎    | 16/30 [03:15<02:54, 12.47s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "execution = 16\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 57%|█████▋    | 17/30 [03:29<02:49, 13.01s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "execution = 17\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 60%|██████    | 18/30 [03:44<02:41, 13.43s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "execution = 18\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 63%|██████▎   | 19/30 [03:56<02:24, 13.17s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "execution = 19\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 67%|██████▋   | 20/30 [04:11<02:15, 13.50s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "execution = 20\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 70%|███████   | 21/30 [04:25<02:02, 13.65s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "execution = 21\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 73%|███████▎  | 22/30 [04:37<01:45, 13.19s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "execution = 22\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 77%|███████▋  | 23/30 [04:49<01:30, 12.88s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "execution = 23\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 80%|████████  | 24/30 [05:01<01:16, 12.68s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "execution = 24\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 83%|████████▎ | 25/30 [05:13<01:02, 12.54s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "execution = 25\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 87%|████████▋ | 26/30 [05:26<00:49, 12.42s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "execution = 26\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 90%|█████████ | 27/30 [05:38<00:37, 12.35s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "execution = 27\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 93%|█████████▎| 28/30 [05:50<00:24, 12.27s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "execution = 28\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 97%|█████████▋| 29/30 [06:02<00:12, 12.22s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "execution = 29\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 30/30 [06:14<00:00, 12.15s/it]\n"
+      " 77%|███████▋  | 23/30 [2:04:06<53:58, 462.65s/it]  "
      ]
     }
    ],
    "source": [
-    "AverageTop5 = []\n",
-    "AverageTop10 = []\n",
-    "AverageTop15 = []\n",
-    "AverageTop20 = []\n",
-    "\n",
     "for execution in tqdm(range(30)):\n",
     "    \n",
-    "    print(\"execution = \"+ str(execution))\n",
+    "    #print(\"execution = \"+ str(execution))\n",
     "    \n",
     "    corpusArticlesID = []\n",
     "    corpusArticlesText = []\n",
@@ -637,104 +203,28 @@
     "    \n",
     "            accuracy.append(getAccuracy(idRankedTables,idQueryGoal))\n",
     "    \n",
-    "        if accuracyK == 5:\n",
-    "            \n",
-    "            AverageTop5.append(np.mean(accuracy))\n",
-    "        \n",
-    "        if accuracyK == 10:\n",
-    "            \n",
-    "            AverageTop10.append(np.mean(accuracy))\n",
-    "        \n",
-    "        if accuracyK == 15:\n",
-    "            \n",
-    "            AverageTop15.append(np.mean(accuracy))\n",
-    "        \n",
-    "        if accuracyK == 20:\n",
-    "            \n",
-    "            AverageTop20.append(np.mean(accuracy))\n",
-    "            \n",
-    "        #print(\"TOP \"+str(accuracyK)+\" = \"+str(np.mean(accuracy)))"
+    "        #save the accuracy on the list\n",
+    "        saveAccuracy(accuracyK,np.mean(accuracy))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.09451631252505219"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.std(AverageTop5)"
+    "print(str(round(np.mean(AverageTop5),4))+\" (±) \"+str(round(np.std(AverageTop5),4)))\n",
+    "print(str(round(np.mean(AverageTop10),4))+\" (±) \"+str(round(np.std(AverageTop10),4)))\n",
+    "print(str(round(np.mean(AverageTop15),4))+\" (±) \"+str(round(np.std(AverageTop15),4)))\n",
+    "print(str(round(np.mean(AverageTop20),4))+\" (±) \"+str(round(np.std(AverageTop20),4)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.1175679472569893"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.std(AverageTop10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.1303414319734477"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.std(AverageTop15)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.13337499349161705"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.std(AverageTop20)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
