--- a/LoadAndClearDataArticles.ipynb
+++ b/LoadAndClearDataArticles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,29 +16,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rawArticles = pickle.load(open(\"articlesDataset/final_article_tables.pkl\",\"rb\"))\n",
-    "rawTables = pickle.load(open(\"articlesDataset/final_dict_tables.pkl\",\"rb\"))"
+    "rawArticles = pickle.load(open(\"articlesDataset/final_article_tables.pkl\",\"rb\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 90000/90000 [01:42<00:00, 874.20it/s] \n"
+      "100%|██████████| 90000/90000 [04:40<00:00, 317.61it/s]\n"
      ]
     }
    ],
    "source": [
     "formattedArticles = []\n",
+    "linksArticles = []\n",
     "\n",
     "for i in tqdm(rawArticles.keys()):\n",
     "    \n",
@@ -50,6 +50,8 @@
     "\n",
     "    for i in range(totalArticles):\n",
     "    \n",
+    "        link = str(dataArticle[i][0])\n",
+    "        \n",
     "        fullText = str(dataArticle[i][1])\n",
     "    \n",
     "        #removing special characters\n",
@@ -58,43 +60,30 @@
     "        #removing left and right spaces\n",
     "        formattedText = formattedText.lstrip()\n",
     "        formattedText = formattedText.rstrip()\n",
-    "    \n",
-    "        formattedArticles.append([keyArticle,formattedText])"
+    "        \n",
+    "        # checking if there is article text\n",
+    "        if fullText != \"\":\n",
+    "            \n",
+    "            formattedArticles.append([keyArticle,formattedText])\n",
+    "            \n",
+    "            linksArticles.append([keyArticle,link]) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 98%|█████████▊| 291676/298725 [00:31<00:00, 9184.49it/s] \n"
+      "100%|██████████| 291499/291499 [01:06<00:00, 4365.74it/s]\n"
      ]
     }
    ],
    "source": [
-    "for article in tqdm(formattedArticles):\n",
-    "    if (article[1] == ''):\n",
-    "        formattedArticles.remove(article)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 291676/291676 [00:25<00:00, 11319.55it/s]\n"
-     ]
-    }
-   ],
-   "source": [
+    "#saving the articles on the file\n",
     "with open('cleanDataArticles', 'w') as myfile:\n",
     "        \n",
     "    wr = csv.writer(myfile, quoting=csv.QUOTE_ALL)\n",
@@ -109,6 +98,43 @@
     "        \n",
     "        wr.writerow(row)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 291499/291499 [00:01<00:00, 149527.87it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#saving the links on the file\n",
+    "with open('dataArticlesLinks', 'w') as myfile:\n",
+    "        \n",
+    "    wr = csv.writer(myfile, quoting=csv.QUOTE_ALL)\n",
+    "    \n",
+    "    for article in tqdm(linksArticles):\n",
+    "    \n",
+    "        articleID = article[0]\n",
+    "    \n",
+    "        articleLink = article[1]\n",
+    "    \n",
+    "        row = [articleID,articleLink]\n",
+    "        \n",
+    "        wr.writerow(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
